--- a/q/275590.html
+++ b/q/275590.html
@@ -26,30 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>326</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
+<tr d-ix="0"><td>323</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
 <tr d-ix="1"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
 <tr d-ix="2"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="3"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 <tr d-ix="4"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
 <tr d-ix="5"><td>303</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript, 326 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript, 323 bytes</h1>
 <p>I don't golf with JavaScript much so I'm sure there's a lot of opportunities for golfing here. Should work on most browsers.</p>
 <pre class="lang-js prettyprint-override"><code>x=&gt;{a=new AudioContext
-with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**((s-21)/12),(t*32+i)*.19)
-for(i=0;i&lt;32;i++)i&lt;17?p(c[i%4]+12*(i/4|0)):p(c[3-(i-1)%4]+12*((32-i)/4|0))})
+with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**(s-1.75),(t*32+i)*.19)
+for(i=0;i&lt;32;i++)i&lt;17?p(c[i%4]/12+(i/4|0)):p(c[3-(i-1)%4]/12+((32-i)/4|0))})
 connect(a.destination)
 start()
 stop(48.64)}}
 </code></pre>
+<p>-3 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">Neil</a></p>
 <h2>Try it</h2>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-js lang-js prettyprint-override"><code>f =
 
 x=&gt;{a=new AudioContext
-with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**((s-21)/12),(t*32+i)*.19)
-for(i=0;i&lt;32;i++)i&lt;17?p(c[i%4]+12*(i/4|0)):p(c[3-(i-1)%4]+12*((32-i)/4|0))})
+with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**(s-1.75),(t*32+i)*.19)
+for(i=0;i&lt;32;i++)i&lt;17?p(c[i%4]/12+(i/4|0)):p(c[3-(i-1)%4]/12+((32-i)/4|0))})
 connect(a.destination)
 start()
 stop(48.64)}}</code></pre>
