--- a/q/275590.html
+++ b/q/275590.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>297</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
+<tr d-ix="0"><td>280</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
 <tr d-ix="1"><td>323</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
 <tr d-ix="2"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
 <tr d-ix="3"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="4"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 <tr d-ix="5"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> <sub><s>303</s></sub> 297 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> <sub><s>303</s></sub> 280 bytes</h1>
 <pre class="lang-basic prettyprint-override"><code>data 0,2,4,7,-3,-1,0,4,0,2,4,7,-3,-1,0,4,-7,-5,-3,0,-5,-3,-1,2,-4,0,3,7,-2,2,5,9
 dim a(4),m(16):for k=0to 7:for i=1to 4:read a(i):next
-for i=0to 3:for j=1to 4:m(j+4*i)=440*2^(((a(j)+12*i)-21)/12):next:next
-for i=1to 16:s(m(i)):next:for i=1to 15:s(m(16-i)):next:next
+for i=0to 3:for j=1to 4:f=440*2^(((a(j)+12*i)-21)/12):m(j+4*i)=f:s(f):next:next
+for i=1to 15:s(m(16-i)):next:next
 sub s(n):sound n,.15,50:return
 </code></pre>
 <p>The info about chords and octaves in the &quot;music theory&quot; section helped a lot. <br>
@@ -54,10 +54,11 @@ sub t(o)                          :' o is an octave (array of 4 notes, n)
   for i=0to 3                     :' i goes up the octaves (steps of 12)
   for j=1to 4                     :' j runs thru the notes in o
     n=o(j)+12*i:print n;          :' n is the note number, incl factor
-    m(j+4*i)=440*2^((n-21)/12)    :' Add frequency of n (Hz) to array m
+    f=440*2^((n-21)/12)           :' f is frequency of n (Hz)
+    m(j+4*i)=f                    :' Add f to array m
+    s(f)                          :' Play f (Up)
   next:next
-  for i=1to 16:s(m(i)):next       :' Play m Up
-  for i=1to 15:s(m(16-i)):next    :' Play m Down
+  for i=1to 15:s(m(16-i)):next    :' Play m (Down)
   print
 return
 
