--- a/q/275590.html
+++ b/q/275590.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>378</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
-<tr d-ix="1"><td>270</td><td>Javascript</td><td>240920T193816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275663#275663">ccprog</a></td></tr>
+<tr d-ix="0"><td>270</td><td>Javascript</td><td>240920T193816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275663#275663">ccprog</a></td></tr>
+<tr d-ix="1"><td>378</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
 <tr d-ix="2"><td>280</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
 <tr d-ix="3"><td>323</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
 <tr d-ix="4"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
@@ -35,31 +35,10 @@
 <tr d-ix="6"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 <tr d-ix="7"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript, 378 bytes</h1>
-<p>I used an array containing as many elements as there are notes to play, making sure that each element can be represented by a single hexadecimal character.</p>
-<p>This character represents a number of semitones of difference between this note and the previous note (except for the first element which is played as is)</p>
-<p>I then realized that some big chunks were repeated (those corresponding to the arpeggios in add2 and Maj7) and that I could factorize these portions of code</p>
-<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-js lang-js prettyprint-override"><code>d="778a778a778a778a023302330233"
-e="0230769a769a769a769a014301430143014"
-g="9896989698969896412141214121412"
-h=(`5${d+e}6${d+e}1${d}0237${d}0234${g}7`+g).split``.map(x=&gt;+("0x"+x)-5)
-f=()=&gt;{a=new AudioContext()
-with(a.createOscillator()){c=0
-h.map((u,i)=&gt;{frequency.setValueAtTime(440*2**((c-21)/12),i*0.19);c+=u})
-connect(a.destination)
-start()
-stop(48.64)}}</code></pre>
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
-</div>
-</div>
-</p>
-</div>
-<div id="pu1" class="pu"><h1>Javascript, 270 bytes</h1>
+<div id="pu0" class="pu"><h1>Javascript, 270 bytes</h1>
 <pre><code>x=&gt;{a=new AudioContext
 with(a.createOscillator()){
-for(i=0;i&lt;256;i++){n=[60,49,60,49,16,24,30,38][i&gt;&gt;5]
+for(i=0;i&lt;256;i++){n=[60,49,60,49,32,40,46,54][i&gt;&gt;5]
 q=[1258,810,1804][n%4]
 frequency.setValueAtTime(55*2**((b=i&amp;31?b+(i%32&gt;16?-(q&gt;&gt;i%4*3&amp;7):q&gt;&gt;(257-i)%4*3&amp;7):n&gt;&gt;2)/12),i*3/16)}
 connect(a.destination)
@@ -71,7 +50,7 @@ stop(48)}}
 <pre><code>f = 55 * 2 ** (s / 12)
 </code></pre>
 <p>with the semitones distance form the base note <code>s</code> being</p>
-<pre><code>15 12 15 12 4 6 7 9
+<pre><code>15 12 15 12 8 10 11 13
 </code></pre>
 <p>There are only three different chords being used that can be described by their sequence of semitone differences. The last column is a magic number encoding the differences as octal. For golfing reasons the digits are ordered as 1-2-3-0</p>
 <pre><code>0:  major add2  |  2 2 3 5  |  0o2352 = 1258
@@ -79,10 +58,10 @@ stop(48)}}
 2:  major 7     |  4 3 4 1  |  0o3414 = 1804
 </code></pre>
 <p>The whole sequence can be described as a two-dimensional array</p>
-<pre><code>[[15, 0], [12, 1], [15, 0], [12, 1], [4, 0], [6, 0], [7, 2] [9, 2]]
+<pre><code>[[15, 0], [12, 1], [15, 0], [12, 1], [8, 0], [10, 0], [11, 2] [13, 2]]
 </code></pre>
 <p>or with the chord index as the lowest two bits in one number</p>
-<pre><code>[60, 49, 60, 49, 16, 24, 30, 38]
+<pre><code>[60, 49, 60, 49, 32, 40, 46, 54]
 </code></pre>
 <p>From there, using the same code as <strong>@Jordan</strong> for the <code>AudioContext</code> interface (ungolfed):</p>
 <pre><code>x =&gt; {
@@ -90,7 +69,7 @@ stop(48)}}
   with (a.createOscillator()) {
     for (i = 0; i &lt; 256; i++) {
       
-      n = [60,49,60,49,16,24,30,38][i&gt;&gt;5]  // after each 32 a new arpegio
+      n = [60,49,60,49,32,40,46,54][i&gt;&gt;5]  // after each 32 a new arpegio
       q = [1258,810,1804][n%4]             // magic chord number
       b = i&amp;31 ?                           // inside arpeggio sequence,
         b + (                              // add semitone difference
@@ -115,12 +94,33 @@ stop(48)}}
 
 x=&gt;{a=new AudioContext
 with(a.createOscillator()){
-for(i=0;i&lt;256;i++){n=[60,49,60,49,16,24,30,38][i&gt;&gt;5]
+for(i=0;i&lt;256;i++){n=[60,49,60,49,32,40,46,54][i&gt;&gt;5]
 q=[1258,810,1804][n%4]
 frequency.setValueAtTime(55*2**((b=i&amp;31?b+(i%32&gt;16?-(q&gt;&gt;i%4*3&amp;7):q&gt;&gt;(257-i)%4*3&amp;7):n&gt;&gt;2)/12),i*3/16)}
 connect(a.destination)
 start()
 stop(48)}}</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
+</div>
+</div>
+</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript, 378 bytes</h1>
+<p>I used an array containing as many elements as there are notes to play, making sure that each element can be represented by a single hexadecimal character.</p>
+<p>This character represents a number of semitones of difference between this note and the previous note (except for the first element which is played as is)</p>
+<p>I then realized that some big chunks were repeated (those corresponding to the arpeggios in add2 and Maj7) and that I could factorize these portions of code</p>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-js lang-js prettyprint-override"><code>d="778a778a778a778a023302330233"
+e="0230769a769a769a769a014301430143014"
+g="9896989698969896412141214121412"
+h=(`5${d+e}6${d+e}1${d}0237${d}0234${g}7`+g).split``.map(x=&gt;+("0x"+x)-5)
+f=()=&gt;{a=new AudioContext()
+with(a.createOscillator()){c=0
+h.map((u,i)=&gt;{frequency.setValueAtTime(440*2**((c-21)/12),i*0.19);c+=u})
+connect(a.destination)
+start()
+stop(48.64)}}</code></pre>
 <pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
 </div>
 </div>
@@ -322,12 +322,12 @@ $aC$EG$AO5c$eg$aC$EG$AO7c$eg$ag$ecO5$AG$EC$ag$ecO3$AG$EC
 $bDFA$BO5dfa$bDFA$BO7dfa$bafdO5$BAFD$bafdO3$BAFD
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 136 DECLEs<sup>1</sup>=170 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="noreferrer">CP-1610</a> machine code, 136 DECLEs<sup>1</sup>=170 bytes</h1>
 <p><em><sup>1. CP-1610 instructions are encoded with 10-bit values (0x000 to 0x3FF), known as DECLEs. Although the Intellivision is also able to work on 16-bit data, programs were really stored in 10-bit ROM back then.</sup></em></p>
 <p>A fantasy console?!? Let's do it on a real one!</p>
 <p>This code is meant to be run on a PAL Intellivision (50Hz). It would also work on an NTSC system (60Hz), but at a different pitch and speed.</p>
 <h2>Demo</h2>
-<p><a href="https://youtu.be/2DOweHnZf0g" rel="nofollow noreferrer">Here is what we get</a> on the real hardware (YouTube video), using the <a href="http://ltoflash.leftturnonly.info/" rel="nofollow noreferrer">LTO Flash!</a>.</p>
+<p><a href="https://youtu.be/2DOweHnZf0g" rel="noreferrer">Here is what we get</a> on the real hardware (YouTube video), using the <a href="http://ltoflash.leftturnonly.info/" rel="noreferrer">LTO Flash!</a>.</p>
 <h2>Source code</h2>
 <pre><code>                            ROMW  10          ; use 10-bit ROM width
 0x4800                      ORG   $4800       ; map our code at $4800
@@ -460,7 +460,7 @@ $bDFA$BO5dfa$bDFA$BO7dfa$bafdO5$BAFD$bafdO3$BAFD
 <p>The PAL-based Intellivision uses a 4.00MHz clock. The PSG is driven from a clock signal at half this rate. Internally, the PSG divides down its clock by 16 to determine the final square-wave frequency. The frequency of a tone produced by a PAL Intellivision is therefore given by:</p>
 <p><span class="math-container">$$F\_tone=\frac{4000000}{32\times P\_channel}$$</span></p>
 <p>where <span class="math-container">\$P\_channel\$</span> is the period register setting for the given channel.</p>
-<p><em>(adapted from the <code>psg.txt</code> file included in <a href="http://spatula-city.org/%7Eim14u2c/intv/" rel="nofollow noreferrer">jzIntv</a>)</em></p>
+<p><em>(adapted from the <code>psg.txt</code> file included in <a href="http://spatula-city.org/%7Eim14u2c/intv/" rel="noreferrer">jzIntv</a>)</em></p>
 <h3>Building the note period table</h3>
 <p>The frequency ratio between two consecutive semitones is given by:</p>
 <p><span class="math-container">$$\sqrt[12]{2}\approx 1,0594631$$</span></p>
